--- a/package.json
+++ b/package.json
@@ -1,11 +1,35 @@
 {
-  "name": "starter-react-app",
-  "version": "1.0.0",
+  "main": "server.js",
+  "name": "sample-app-1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
+    "axios": "^0.19.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.3.3",
+    "cors": "^2.8.5",
+    "es-runtime": "^2.0.0",
+    "express": "^4.17.1",
+    "express-fileupload": "^1.1.5",
+    "mssql": "^5.1.0",
+    "multer": "^1.4.2",
+    "nodemon": "^1.19.3",
+    "path": "^0.12.7",
+    "react": "^16.10.2",
+    "react-count": "^0.2.4",
+    "react-dom": "^16.10.2",
+    "react-player": "^1.13.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
+    "react-switch": "^5.0.1",
+    "reactjs-popup": "^1.5.0",
+    "save": "^2.4.0",
+    "tedious": "^6.4.0",
+    "tedious-promises": "^0.4.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,13 +37,28 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "engines": {
-    "node": "11.x"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "ie 11",
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
+  }
 }
